<resources>
    <string name="app_name">Android MVP</string>
    <string name="home">Home</string>

    // login
    <string name="login">Login</string>
    <string name="username_hint">Github Username</string>
    <string name="password_hint">Password</string>

    <string name="sample_name">Duy Pham</string>
    <string name="sample_link">github.com/duyp</string>

    <string name="github_client_id">78dca82345b88a41244b</string>
    <string name="github_client_secret">4b0de555ea5ec45d40d9e0981c081e3b00eb5d46</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="alert_login">Please Login</string>
    <string name="alert_permission_open_app_setting">To use this feature, please allow permissions!</string>
    <string name="alert_permission_not_granted">Can not use this feature without permission!</string>
    <string name="open_drawer">open_drawer</string>
    <string name="close_drawer">close_drawer</string>
    <string name="up_top">UP</string>
    <string name="no_data">No Data</string>

    // repo
    <string name="repo_owner_format">Owner: <b>%s</b></string>
    <string name="repo_access_format">Access: <b>%s</b></string>
    <string name="repo_language_format">Languages: <b>%s</b></string>
    <string name="watch">Watch</string>
    <string name="fork">Fork</string>
    <string name="un_watch">Unwatch</string>
    <string name="star">Star</string>
    <string name="un_star">Unstar</string>
    <string name="search_by_format">Search by %s</string>
    <string name="issues_format">Issues (%d)</string>
    <string name="commits_format">Commits (%d)</string>
    <string name="branches_format">Branches (%d)</string>
    <string name="release_format">Releases (%d)</string>

    // issues
    <string name="issue_description_format" formatted="false">#%d opened by %s</string>
    <string name="issue_comments_format" formatted="false">, %d comments</string>

    // commits
    <string name="commit_description_format" >%s committed</string>

    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="lorem_short">Lorem Ipsum is simply dummy text of the printing and typesetting industry</string>
    <string name="just_now">just now</string>
</resources>
