<?xml version="1.0" encoding="utf-8"?>
<!--Must be inflated in Relative layout-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/margin_default"
    android:paddingLeft="@dimen/margin_default"
    android:paddingRight="@dimen/margin_default">

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/imvAvatar"
        style="@style/avatar_circle"
        android:layout_centerVertical="true"/>

    <TextView
        android:id="@+id/tvName"
        style="@style/text_name_default"
        android:text="@string/sample_name"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginLeft="@dimen/margin_default"
        android:layout_toRightOf="@id/imvAvatar"
        android:layout_toEndOf="@id/imvAvatar"
        android:background="?attr/selectableItemBackground"/>

    <TextView
        android:id="@+id/tvDes"
        style="@style/text_description"
        android:layout_below="@+id/tvName"
        android:layout_marginTop="@dimen/base5"
        android:text="@string/lorem_short"
        android:layout_alignStart="@id/tvName"
        android:layout_alignLeft="@id/tvName"
        android:layout_alignRight="@+id/tvName"
        android:layout_alignEnd="@+id/tvName" />

    <TextView
        android:id="@+id/tvLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvDes"
        android:layout_alignStart="@id/tvName"
        android:layout_alignLeft="@id/tvName"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/repo_language_format"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvDes"
        android:layout_toRightOf="@id/tvLanguage"
        android:layout_toEndOf="@id/tvLanguage"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/repo_access_format"
        android:id="@+id/tvAccess"/>

    <View style="@style/line_hoz_gray_thin"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_below="@id/tvLanguage"/>

</RelativeLayout>